--- a/en/anida.html
+++ b/en/anida.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Anida - ultra small audio codec and brand new audio solution.">
+<meta charset="utf-8">
+<meta property="og:title" content="Anida is an ultra small audio codec and brand new audio solution.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Anida, provide brand new audio solution from enterprise cloud service to deeply embedded systems.">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
+<meta name="description" content="Anida audio codec provides brand new audio solution from enterprise cloud service to deeply embedded systems.">
 <meta name="service" content="Solution and product design, and independent consulting services.">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<style type="text/css">
-table { border: 1px solid #9fa8b5; margin-bottom: 10px; text-align: left; border-spacing: 0; border-collapse: collapse;}
-table td { max-width:200px; text-align: left; padding:10px; border: 1px solid #9fa8b5; vertical-align:top;}
-</style>
-<title>Anida Audio Codec</title>
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>Anida audio codec</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title"><i>Anida Audio Codec</i></h1>
-      <h2 id="project_tagline"><i>Ultra small audio file now.</i></h2>
-    </header>
-</div>
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-<p><div id="player1" class="aplayer" style="display:none;"></div></p>
-<div class="mainscreen">
-<h2><img src="../images/Anida/Anida_logo.png" style="width:auto;height:170px;"></h2>
-<p><i><b>Small! Fast! It's the audio artificial intelligence era!</b></i><br><br>
-<i><b>Anida</b> is an audio codec and audio compression format developed by Sevenuc Consulting. It was designed to reduce audio data size to reduce transfer time and save disk space. The Anida engine was designed as a KAM (Kilobytes Audio Machine) for deeply embedded system running on small devices and has a small footprint, it promised to compress common music files with kilobytes as opposed to megabytes.</i></p>
+    <div class="jumbotron">
+        <p><img src="../images/Anida/Anida_logo.png" style="width:auto;height:170px;"></p>
+        <h1>Anida audio codec</h1>
+        <p class="lead">
+<b>Small! Fast! It's the audio artificial intelligence era!</b><br><br>
+<b>Anida</b> is an audio codec and audio compression format developed by Sevenuc Consulting. It was designed to reduce audio data size to reduce transfer time and save disk space. The Anida engine was designed as a KAM (Kilobytes Audio Machine) for deeply embedded system running on small devices and has a small footprint, it promised to compress common music files with kilobytes as opposed to megabytes.
+        </p>
+    </div>
+    
+   
 
 <p class="dark">From ICQ to AAI, the next generation of Help Desk Service System based on: <br>
 TTS (Text-to-speech system, speech synthesis) + ASR (automatic speech recognition) + AI (artificial intelligence) + Anida. <br>
-<em>(AAI: audio artificial intelligence, the brand new abbreviation word created by Sevenuc Consulting.)<em></p>
+<em>(AAI: audio artificial intelligence, the brand new abbreviation word created by Sevenuc Consulting.)</em></p>
 
 <h2>Why Anida?</h2>
 <ul><li><b>Save Storage Space.</b> Very high compression of Anida audio codec can be used to save storage space from large scale music sharing sites, live chat app and games, to embedded systems running on small devices. High compression is also very important for end users, who don't want to save 85% and more large storage space in his mobile phone?</li>
@@ -212,21 +208,30 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
 <p><br></p>
 <p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
 
-</div>
-</div>
-</section>
-</div>
 
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
