--- a/en/contact.html
+++ b/en/contact.html
@@ -1,70 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
+<meta charset="utf-8">
+<meta property="og:title" content="Sevenuc Consulting.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
-<meta name="service" content="Independent singer songwriter, independent personal music publishing">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
+<meta name="description" content="Senior business consulting services.">
+<meta name="service" content="senior business consulting services.">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks,Independent Singer Songwriter">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<style type="text/css">
-.smallimg {padding:0 auto;border:none;vertical-align:middle; height:18px; width:20px;}
-</style>
-<title> Contact </title>
+<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence">
+<title>Sevenuc Consulting</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title">Contact</h1>
-      <h2 id="project_tagline"></h2>
-    </header>
-</div>
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-<div class="smallscreen">
+<div class="container-fluid">
 
+<p><br><br><br><br></p>
+<p><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></p>
+<p><br><br><br><br></p>
 
-
-<!--div style="height:100vh; width:vw;"-->
-<ul class="nonelist">
-<!--li><img src="../images/g+.jpg" class="smallimg" />&nbsp;&nbsp;<a href="javascript:void(0);">Google+</a></li-->
-<!--li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);">sevenuc</a></li-->
-<li><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></li></ul>
-<p style="display:none;">Please directly connect me via Twitter or <br> message me via email.</p>
-</div>
-
-<p><br><br><br><br><br><br><br><br><br><br><br><br></p>
-<p><br><br><br><br><br><br><br><br><br><br><br><br></p>
-
-<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
-
-</div>
-</div>
-</section>
-</div>
-
-
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+	
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
 </div>
-</body></html>
-
+</body>
+</html>
