--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <meta property="og:title" content="LittleFox, a small tool designed to help people synthesis subtitle with music and video in an efficient way.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
@@ -8,50 +9,28 @@
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
 <meta name="description" content="LittleFox, a small tool designed to help people synthesis subtitle with music and video in an efficient way.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="subtitle, subtitle editor, subtitle maker, subtitle marker, subtitle format, subtitle renderer, karaoke, LittleFox, LyricsMaker, video editor, high quality animation, slideshows, PowerPoint, Audacity, SRT, ASS, SSA, Aegisub, VSFilter, SubRip, MPlayer, VLC, mpv, GStreamer, Libav, XBMC, avidemux, FFmpeg, Quicktime, WebM, VisualSubSync, Subtitle Workshop, WinSubMux, DivXLand Media Subtitler, AHD Subtitles Maker Professional, Jubler, SubtitleCreator, AVIAddXSubs, Gaupol, Subbr, SubX">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<style type="text/css">
-.none {  padding:0;  margin: 0; }
-/*.warning { color:#cce619;}*/
-.green, gr, lt{color: #007f00; font-weight: bold;}
-.strike {text-decoration: line-through;}
-.treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
-.button { width: auto; height: 36pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: rgba(0, 0, 0, 0);}
-ul { list-style-type:none; list-style:none;}
-.tips { width:auto; height: 22px;}
-
-/*
-th { background:#333; color:white;text-align: center;}
-table { background:#f6f8fa; max-width: 64rem; border: 1px solid #9fa8b5; margin-bottom: 10px; text-align: left; border-spacing: 0; border-collapse: collapse;}
-table td { max-width:200px; text-align: center; padding:10px; border: 1px solid #9fa8b5; vertical-align:top;}
-*/
-</style>
-
-<title> LittleFox </title>
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>LittleFox - designedly subtitle tool for audio and video.</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<!--div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title"> LittleFox </h1>
-      <h2 id="project_tagline">The designedly util developed to synthesis video or audio with subtitles flying in the sky.</h2>
-    </header>
-</div-->
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
+    <div class="jumbotron">
+        <p><img src="../images/littlefox/logo.png" style="width: 120px;" /></p>
+        <h1>LittleFox<br><em>Version 1.5.14</em></h1>
+        <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, or just scale the resolution of your videos to slim them so that you can very easily share them with a very small file size.</p>
+    </div>
+    
 
-<div class="mainscreen">
-<img src="../images/littlefox/logo.png" style="width: 120px;" /><br>
-<h2> LittleFox <br><em> Version 1.5.14 </em></h2>
-
-<p><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, or just scale the resolution of your videos to slim them so that you can very easily share them with a very small file size.</p>
 
 <h2>Share music and video on social websites</h2>
 <p>LittleFox can produce very smaller video file than original mp3 or mp4 file so that the produced output file can be suitable to share on social websites, such as Twitter, Youtube, Vimeo, Netflix etc.</p>
@@ -67,13 +46,15 @@ table td { max-width:200px; text-align: center; padding:10px; border: 1px solid 
 <p class="green"><i>Each synthesising type can put the subtitle in the bottom of the outside margin without video area overlay. Subtitle can be split into two type of content and each type of content can have different font and colour style, and can contains two lines of text, so the maximum number of line count in the external margin area is four lines of text.</i></p>
 
 
-<p><a href="https://itunes.apple.com/us/app/littlefox/id1459361351?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br><br><br><br>
+<p><a href="https://itunes.apple.com/us/app/littlefox/id1459361351?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found LittleFox by searching.</p>
 
 <h2>Screenshot</h2>
-<a href="../images/littlefox/4.png" target="_blank"><img src="../images/littlefox/4.png" class="screenshots"/></a><br>
-<a href="../images/littlefox/1.png" target="_blank"><img src="../images/littlefox/1.png" class="screenshots"/></a><br>
+<p>
+<a href="../images/littlefox/4.png" target="_blank"><img src="../images/littlefox/4.png" class="screenshots"/></a><br><br>
+<a href="../images/littlefox/1.png" target="_blank"><img src="../images/littlefox/1.png" class="screenshots"/></a><br><br>
 <a href="../images/littlefox/2.png" target="_blank"><img src="../images/littlefox/2.png" class="screenshots"/></a><br>
+</p>
 
 
 <h2>Audio</h2>
@@ -216,27 +197,32 @@ You can download the file here: <a href="../images/littlefox/RyoGothicPlusN-Extr
 <p class="green">My Video Now!</p>
 
 
-<!--p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p-->
-
-<br><br>
 <p><br></p>
 
-</div>
-</div>
-</section>
-</div>
 
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
-
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
