--- a/en/mathHelfer.html
+++ b/en/mathHelfer.html
@@ -1,50 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="MathHelfer is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.">
+<meta charset="utf-8">
+<meta property="og:title" content="MathHelfer is an ultra lightweight word processor on macOS.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="MathHelfer is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
+<meta name="description" content="MathHelfer is an ultra lightweight word processor on macOS.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="MathHelfer,word processor,Rich Text editor,Rich Text Processor,TEX,LaTeX,Mathematics,math formulas,LaTeX Formula,LaTeX math,LaTeX equations,Math expression,Mathematical expression,RTF,Office,Word">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<style type="text/css">
-lt {color:#cce619;}
-.screen {width:480px;height:auto;max-width:100%;}
-.smallicon { height:24px;width:auto;vertical-align:middle;margin-right:10px;}
-.green {color: #007f00;}
-</style>
-<title> MathHelfer </title>
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>MathHelfer, an ultra lightweight word processor on macOS.</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<!--div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title"> Speare </h1>
-      <h2 id="project_tagline">The designedly ultra lightweight code editor developed to coding happy for everyone.</h2>
-    </header>
-</div-->
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
+    <div class="jumbotron">
+        <p><img src="../images/MathHelfer/logo.png" style="width: 120px;" /></p>
+        <h1>MathHelfer<br><em>Version 1.0</em></h1>
+        <p class="greenbig"></p>
+        <p class="lead"><b>MathHelfer</b> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.  As a rich text editor, MathHelfer can not only handle LaTeX math and equations but also can deal with common style and format tasks required by a normal word processor.</p>
+    </div>
+    
 
-
-<div class="mainscreen">
-<img src="../images/MathHelfer/logo.png" style="height: 110px;width:auto" /><br>
-<h2> MathHelfer <br><em> Version 1.0 </em></h2>
-
-<p><a href="http://www.sevenuc.com/en/MathHelfer.html">MathHelfer </a>is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.  As a rich text editor, MathHelfer can not only handle LaTeX math and equations but also can deal with common style and format tasks required by a normal word processor.</p>
 
 <div>
-<p><a href="https://apps.apple.com/us/app/mathhelfer/id1479973709?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br>
+<p><a href="https://apps.apple.com/us/app/mathhelfer/id1479973709?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found MathHelfer by searching.</p>
 </div>
 
@@ -61,8 +51,11 @@ lt {color:#cce619;}
 <p><b>MathHelfer </b> is only 5.1MB,  but it can help you write a well formatted science article in a very light way without install the mentioned huge software packages.</p>
 
 <h2>Screenshot</h2>
-<a href="../images/MathHelfer/1.png" target="_blank"><img src="../images/MathHelfer/1.png" class="screenshots"/></a><br>
+<p>
+<a href="../images/MathHelfer/1.png" target="_blank"><img src="../images/MathHelfer/1.png" class="screenshots"/></a><br><br>
 <a href="../images/MathHelfer/Ramanujan.png" target="_blank"><img src="../images/MathHelfer/Ramanujan.png" class="screenshots"/></a><br><br>
+</p>
+
 
 <b>About Respected Mr. Srinivasa Aiyangar Ramanujan:</b><br>
 <ul><li class="green">He breaks all stereotypes about learning and education despite only a little formal education and in his heart believing god always.</li>
@@ -131,27 +124,36 @@ lt {color:#cce619;}
 2. OpenOffice, another LibreOffice alternative office suite on macOS, <a href="http://www.openoffice.org" target="_blank">http://www.openoffice.org</a>.<br>
 </p>
 
-<p><br></p>
+
 <p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p>
-<br><br>
 
-</div>
-</div>
-</section>
-</div>
+
+<p><br><br><br></p>
 
 
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
-
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
