--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -1,49 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="The next generation intelligent microcomputer.">
+<meta charset="utf-8">
+<meta property="og:title" content="Chinese Chess Reviewer, the powerful Chinese chess machine.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
 <meta name="description" content="Chinese Chess Reviewer, the powerful Chinese chess machine.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<!--script src="../js/twitter.js"></script-->
-<title> Chinese Chess Reviewer </title>
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>Chinese Chess Reviewer, the powerful Chinese chess machine.</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title">Chinese Chess Reviewer</h1>
-      <h2 id="project_tagline">The powerful Chinese chess machine.</h2>
-    </header>
-</div>
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-
-<h2></h2>
-<div class="mainscreen">
-<div style="max-width:470px;">
-
-<video class="videobox" id="mainVideo" width="268" height="480" controls autoplay>
-<source src="/videos/reviewer.mp4" type="video/mp4">
-</video>
-
-
-<p><b>Chinese Chess Reviewer (aka CCReviewer)</b>, is a powerful chess machine. It was designed to record chess moves in international competitions. It have recorded thousands of large scale international chess games and you can use it to analyse these records and even participate in any of them at anytime. <br><br>
-
-
-CCReviewer is a carefully designed chess review and learning tool on mobile device. It is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
+    <div class="jumbotron">
+        <h1>Chinese Chess Reviewer</h1>
+        <p class="greenbig">The powerful Chinese chess machine</p>
+        <p class="lead">
+<b>Chinese Chess Reviewer (aka CCReviewer)</b>, is a powerful chess machine. It was designed to record chess moves in international competitions. It have recorded thousands of large scale international chess games and you can use it to analyse these records and even participate in any of them at anytime. </p>
+    </div>
+    
+<p>CCReviewer is a carefully designed chess review and learning tool on mobile device. It is a powerful chess analyser, move recorder and game records player. You can review game records and see the entire game process at any detailed steps. Learn how the masters playing Chinese chess in real games from 1980s. It's also an app to learn how to play Chinese Chess in an efficient way. The app has a build-in database that collected more than 40,000 games by 4000 professional players, so much master's moves that you want to deeply learning included!</p>
 
 
 <h2>Features</h2>
@@ -88,17 +76,54 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 <p>Download the funny app from App Store: <br><br><a class ="appstore_download_link" href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1293135726&mt=8"></a> <br></p>
 <p><br><br></p>
 
+
 <h2>Screenshots</h2>
 <div class="screenshots">
-<p><a href="../images/reviewer/1.png" target="_blank"><img src="../images/reviewer/1.png" class="screenshots"></a></p>
-<p><a href="../images/reviewer/2.png" target="_blank"><img src="../images/reviewer/2.png" class="screenshots"></a></p>
-<p><a href="../images/reviewer/2.png" target="_blank"><img src="../images/reviewer/6.png" class="screenshots"></a></p>
-<p><a href="../images/reviewer/3.png" target="_blank"><img src="../images/reviewer/3.png" class="screenshots"></a></p>
-<p><a href="../images/reviewer/4.png" target="_blank"><img src="../images/reviewer/4.png" class="screenshots"></a></p>
-<p><a href="../images/reviewer/5.png" target="_blank"><img src="../images/reviewer/5.png" class="screenshots"></a></p>
+<div class="row">
+   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../images/reviewer/1.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/reviewer/2.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/reviewer/6.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/reviewer/3.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/reviewer/4.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/reviewer/5.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
 </div>
-<p><br></p>
+</div>
 
+
+<p><br><br></p>
+<hr>
 
 <h2>Challenge Yourself!</h2>
 <p>There is an ancient DOS game, Chinese Chess Master III ( 將族 III), the AI algorithm of the game is amazing powerful! Before AlphaGo from google versus Lee Sedol (one of the top Go game players) at March 2016, many years ago, this excellent DOS game made so many professional human chess players lost. How powerful the chess players in this game are unknown! AlphaGo run with distributed 1,920 CPUs and 280 GPU and more, but this DOS game is only 926KB running on one CPU with 64KB memory! Might this small game requires you to challenge it in your whole life! Maybe the weakest one, Mr. pig can easily beat you! Here it is!</p>
@@ -111,22 +136,32 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 
 <p>You can challenge this dead powerful game on Android phone, iPhone, iPad, or on Macintosh, Windows and Linux, anywhere you required to play on, I'm pleasured to packing it for you on any platform. Further more, I've collected tons of wonderful DOS game/arcade game so many years, if you're interesting in play them again, please email your request.</p>
 
-<p><br></p>
-</div>
-</div>
+<p><br><br></p>
 
-</section>
-</div>
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
