--- a/en/terms.html
+++ b/en/terms.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="The next generation intelligent microcomputer.">
+<meta charset="utf-8">
+<meta property="og:title" content="Sevenuc Consulting.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="The greatest breakthroughs since the wheel, a series of revolutionary products comes along that will change almost everything.">
-<meta name="service" content="Product development and independent consulting services">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
+<meta name="description" content="senior business consulting services.">
+<meta name="service" content="senior business consulting services.">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<title> Trademarks </title>
+<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence">
+<title>Sevenuc Consulting</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title">Trademarks</h1>
-      <h2 id="project_tagline"></h2>
-    </header>
-</div>
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
+<div class="container-fluid">
+
+
+<div class="jumbotron">
+           
+<h1></h1>
+<h4></h4>
+
+
 <p>The software developed by Sevenuc Consulting is usually cross-platform and running on multiple devices. Our use of all registered trademarks of third parties, as well as their logos, is subject to the permissions of each one of these third parties.</p>
 
 <ol><li>Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. iPhone is a trademark of Apple Inc.</li>
@@ -38,19 +41,34 @@
 <li>Nokia, Nokia logo, S40, S60 and related trademarks are trademarks or registered trademarks of Nokia Corporation.</li>
 <li>Bada, Bada logo, Samsung, Samsung logo, Samsung Galaxy and related trademarks are trademarks or registered trademarks of Samsung Electronics Co.,Ltd.</li>
 </ol>
-<!--div style="height:100vh; width:vw;"></div-->
-</section>
-</div>
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://sevenuc.com"><img src="http://sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+<p><br><br></p>
+
+</div> 
+
+	
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://sevenuc.com/en/about.html"> About </a>|
-      <a href="http://sevenuc.com/en/service.html"> Services </a>|
-      <a href="http://sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
 </div>
-</body></html>
+</body>
+</html>
