--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -1,48 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Tungsyu「通書」,the Calendar of Yangtze River.">
+<meta charset="utf-8">
+<meta property="og:title" content="Tungsyu, the Calendar of Yangtze River.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Tungsyu「通書」,the Calendar of Yangtze River.">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
+<meta name="description" content="Tungsyu, the Calendar of Yangtze River.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Tungsyu,通書,農曆,萬年曆,通勝,老黃曆,節氣,天干地支,六十甲子,二十四節氣,十二建神,擇日,五行,陰陽五行,八字,算命,黃道吉日,二十四節氣, 24 Solar Terms, 節氣, Solar Terms">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<style type="text/css">
-.none {  padding:0;  margin: 0; }
-.button { width: auto; height: 18pt; vertical-align:middle; padding: 2px 2px 2px 2px;background: #f0f0f0; }
-.small { font-size: 12pt;}
-.map { max-width: 700px;}
-</style>
-
-<title>Tungsyu</title>
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>Tungsyu, the Calendar of Yangtze River.</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<!--div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title">Tungsyu「通書」</h1>
-      <h2 id="project_tagline">The Calendar of Yangtze River.</h2>
-    </header>
-</div-->
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-
-
-<div class="mainscreen">
-<img src="../images/Tungsyu/logo.png" style="width: 120px;" /><br>
-<h2> Tungsyu <br><em>Version 1.3 </em></h2>
-
-<p><b>Tungsyu「通書」</b> (The Calendar of Yangtze River), 是一個為提供農曆相關資訊查詢而特意開發的工具軟體。 該軟體提供農曆各個年份、月份、特定日子以及該日各個時辰的六十花甲天干、地支信息，以及星期、星座、五行屬性、值日星宿、十二建神、忌日、用時宜忌等信息，另外還特別包含二十四節氣交接的精準信息，精確到秒。 使用該工具可以非常方便地進行西曆和農曆的相互轉換和對照。開發該工具軟體以方便使用者進行農曆相關信息的便捷查詢。</p>
+    <div class="jumbotron">
+        <p><img src="../images/Tungsyu/logo.png" style="width: 120px;" /></p>
+        <h1>Tungsyu<br><em>Version 1.3 </em></h1>
+        <p class="greenbig">Tungsyu, the Calendar of Yangtze River.</p>
+        <p class="lead"><b>Tungsyu「通書」</b> (The Calendar of Yangtze River), 是一個為提供農曆相關資訊查詢而特意開發的工具軟體。 該軟體提供農曆各個年份、月份、特定日子以及該日各個時辰的六十花甲天干、地支信息，以及星期、星座、五行屬性、值日星宿、十二建神、忌日、用時宜忌等信息，另外還特別包含二十四節氣交接的精準信息，精確到秒。 使用該工具可以非常方便地進行西曆和農曆的相互轉換和對照。開發該工具軟體以方便使用者進行農曆相關信息的便捷查詢。</p>
+    </div>
+    
 
 <p><a href="https://itunes.apple.com/us/app/tungsyu/id1457444475?mt=12" target="_blank" class="appstore_download_link" ><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found Tungsyu by searching.</p>
@@ -50,8 +38,9 @@
 <p><img src="../images/Tungsyu/Yangtze_River.jpg" class="screenshots"/></p>
 
 <h2>Screenshots:</h2>
-<p><a href="../images/Tungsyu/1.png" target="_blank"><img src="../images/Tungsyu/1.png" class="screenshots"></a><br>
-<a href="../images/Tungsyu/3.png" target="_blank"><img src="../images/Tungsyu/3.png" class="screenshots"></a><br>
+<p>
+<a href="../images/Tungsyu/1.png" target="_blank"><img src="../images/Tungsyu/1.png" class="screenshots"></a><br><br>
+<a href="../images/Tungsyu/3.png" target="_blank"><img src="../images/Tungsyu/3.png" class="screenshots"></a><br><br>
 </p>
 
 <h2>查詢</h2>
@@ -71,24 +60,34 @@
 <h2>引用</h2>
 <p><a href="taihaa.html">Taihaa「睇哈」</a>, 娛樂性質的嚴肅命理分析工具。 (High accuracy fate telling app, a serious app developed just for fun.)</p>
 
-<p><br></p>
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
-</div>
-</div>
-</section>
-</div>
+<p><br><br></p>
 
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
