--- a/en/apps.html
+++ b/en/apps.html
@@ -1,130 +1,171 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Management consulting, leading advisor on business strategy, reliable partner of software architecture design.">
+<meta charset="utf-8">
+<meta property="og:title" content="Tool software developed by Sevenuc Consulting for macOS and iOS.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Management consulting, leading advisor on business strategy, reliable partner of software architecture design.">
-<meta name="service" content="Product development and independent consulting services">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
+<meta name="description" content="Tool software developed by Sevenuc Consulting for macOS and iOS.">
+<meta name="service" content="Solution and product design, and independent consulting services.">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>Tool software for macOS and iOS</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 <style type="text/css">
-.macapp { width: auto; height: 86px; border-radius: 10px; float:left; margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
-.appicon { width: auto; height: 92px; border-radius: 10px; float:left; margin:0 1em 0.5em 0}
-.section { display: block; width: auto; min-height: 120px; }
+.macapp { width: auto; height: 86px; border-radius: 10px;  margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
+.appicon { width: auto; height: 92px; border-radius: 10px;  margin:0 1em 0.5em 0}
 </style>
-<title>Apps</title>
 </head>
 <body>
 
-<!-- HEADER -->
-<!--div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title">Apps</h1>
-      <h2 id="project_tagline">Some apps developed as useful tool or just for demonstration.</h2>
-    </header>
-</div-->
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-<!--div id="player1" class="aplayer" style="display:none;"></div-->
-<div class="mainscreen">
+    <div class="jumbotron">
+        <h1>Tool softwares</h1>
+        <p class="lead">Some software developed for macOS and iOS,  they're developed as useful tool or just for demonstration purpose.</p>
+    </div>
+    
+<div class="row">
+<div class="col-md-4">
+<p><a href="mathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a></p>
+<h2>MathHelfer</h2>
+<p><a href="mathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
+</div> <!-- col-md-4-->
 
+<div class="col-md-4">
+<p><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a></p>
+<h2>Speare Code Editor</h2>
+<p>The free small IDE for scripting languages.<br><br> <a href="speare.html"><b>Speare</b></a> is an ultra lightweight code editor and a small IDE that provides builtin debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</p>
+</div> <!-- col-md-4-->
 
-<h2>macOS Apps</h2>
+<div class="col-md-4">
+<p><a href="littlefox.html"><img src="../images/littlefox/logo.png" class="macapp" /></a></p>
+<h2>LittleFox</h2>
+<p><a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
+</div> <!-- col-md-4-->
+</div><!-- row -->
 
-<p class="section"><a href="mathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a>
-<a href="mathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
-
-
-<p class="section"><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a>
-The free small IDE for scripting languages. <a href="speare.html"><b>Speare</b></a> is an ultra lightweight code editor and a small IDE that provides builtin debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</p>
-
-<p class="section"><a href="littlefox.html"><img src="../images/littlefox/logo.png" class="macapp" /></a>
-<a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
-
-<p class="section"><a href="guard.html"><img src="../images/guard/guard7_logo.png" class="macapp" /></a>
-<a href="guard.html"><b>Guard7</b></a> is a cryptography tool used to protect your confidential information very simple and easy. It is an encryption and decryption system based on industry standard and was developed as the graphical frontend for the GNU Privacy Guard (GnuPG or GPG) on macOS with additional features.
+<div class="row">
+<div class="col-md-4">
+<p><a href="guard.html"><img src="../images/guard/guard7_logo.png" class="macapp" /></a></p>
+<h2>Guard7</h2>
+<p><a href="guard.html"><b>Guard7</b></a> is a cryptography tool used to protect your confidential information very simple and easy. It is an encryption and decryption system based on industry standard and was developed as the graphical frontend for the GNU Privacy Guard (GnuPG or GPG) on macOS with additional features.
 </p>
+</div> <!-- col-md-4-->
 
-<p class="section"><a href="beak.html"><img src="../images/beak/beak_logo.png" class="macapp" /></a>
-<a href="beak.html"><b>Beak</b></a> is a small utility used to reduce binary size of your software for embedded systems, and also an ultra small C and C++ obfuscator that used to encrypt source code of your software. 
+<div class="col-md-4">
+<p><a href="beak.html"><img src="../images/beak/beak_logo.png" class="macapp" /></a></p>
+<h2>Beak</h2>
+<p><a href="beak.html"><b>Beak</b></a> is a small utility used to reduce binary size of your software for embedded systems, and also an ultra small C and C++ obfuscator that used to encrypt source code of your software. 
 </p>
+</div> <!-- col-md-4-->
 
-<p class="section"><a href="lyricsmaker.html"><img src="../images/lyricsmaker/logo.png" class="macapp" /></a>
-<a href="lyricsmaker.html"><b>LyricsMaker</b></a> is a small tool that was designed to easily make lyrics sheet for music or generate subtitle for movie on macOS.
+<div class="col-md-4">
+<p><a href="lyricsmaker.html"><img src="../images/lyricsmaker/logo.png" class="macapp" /></a></p>
+<h2>LyricsMaker</h2>
+<p><a href="lyricsmaker.html"><b>LyricsMaker</b></a> is a small tool that was designed to easily make lyrics sheet for music or generate subtitle for movie on macOS.
 </p>
+</div> <!-- col-md-4-->
+</div><!-- row -->
 
-<p class="section"><a href="uftp.html"><img src="../images/uftp/logo.png" class="macapp" /></a>
-<a href="uftp.html"><b>uFTP Server</b></a> is a very simple personal FTP Server designed for macOS without any user authentication, without complex and boring configuration, but still has very high performance.
+
+<div class="row">
+<div class="col-md-4">
+<p><a href="uftp.html"><img src="../images/uftp/logo.png" class="macapp" /></a></p>
+<h2>uFTP Server</h2>
+<p><a href="uftp.html"><b>uFTP Server</b></a> is a very simple personal FTP Server designed for macOS without any user authentication, without complex and boring configuration, but still has very high performance.
 </p>
+</div> <!-- col-md-4-->
 
-<p class="section"><a href="taihaa.html"><img src="../images/Taihaa/logo.png" class="macapp" /></a>
-<a href="taihaa.html"><b>Taihaa</b></a> is a fate telling app. It's a high precision fate analysis engine and high accuracy fate telling app designed for embedded systems that can be developed as standalone machine or handheld device. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report.
+<div class="col-md-4">
+<p><a href="taihaa.html"><img src="../images/Taihaa/logo.png" class="macapp" /></a></p>
+<p><a href="taihaa.html"><b>Taihaa</b></a> is a fate telling app. It's a high precision fate analysis engine and high accuracy fate telling app designed for embedded systems that can be developed as standalone machine or handheld device. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report.</p>
+</div> <!-- col-md-4-->
+
+<div class="col-md-4">
+</div> <!-- col-md-4-->
+</div><!-- row -->
+
+<hr>
+<h1>iOS Apps</h1>
+<p><br><br><br><br></p>
+
+<div class="row">
+<div class="col-md-4">
+<p><a href="powerreader.html"><img src="../images/editor/logo.png" class="appicon" /></a></p>
+<p><a href="powerreader.html"><b>iPowerReader</b></a> is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free. You can conveniently share your documents in your iOS devices between Mac, Windows PC, Linux, Android, Unix, PSP and other platforms remotely. 
 </p>
+</div> <!-- col-md-4-->
 
-<p><br></p>
-
-<h2>iOS Apps</h2>
-
-<p class="section"><a href="powerreader.html"><img src="../images/editor/logo.png" class="appicon" /></a>
-<a href="powerreader.html"><b>iPowerReader</b></a> is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free. You can conveniently share your documents in your iOS devices between Mac, Windows PC, Linux, Android, Unix, PSP and other platforms remotely. 
+<div class="col-md-4">
+<p><a href="iq.html"><img src="../images/iq/logo.png" class="appicon" /></a></p>
+<p><a href="iq.html"><b>Mr.IQ</b></a> is an utility designed for Raven's Standard IQ Test. This is the standard approach to process accurate IQ test. It can be used for serious test or only just for fun.
 </p>
+</div> <!-- col-md-4-->
 
-<p class="section"><a href="iq.html"><img src="../images/iq/logo.png" class="appicon" /></a>
-<a href="iq.html"><b>Mr.IQ</b></a> is an utility designed for Raven's Standard IQ Test. This is the standard approach to process accurate IQ test. It can be used for serious test or only just for fun.
+<div class="col-md-4">
+<p><a href="reviewer.html"><img src="../images/reviewer/logo.png" class="appicon" /></a></p>
+<p><a href="reviewer.html"><b>CCReviewer</b></a> is a powerful Chinese chess machine. It was designed to record chess moves in international competitions. It's also a powerful tool to learn how to play Chinese Chess and a chess analysis tool that even give your the ability to participate in any history games.
 </p>
+</div> <!-- col-md-4-->
+</div><!-- row -->
 
-<p class="section"><a href="reviewer.html"><img src="../images/reviewer/logo.png" class="appicon" /></a>
-<a href="reviewer.html"><b>CCReviewer</b></a> is a powerful Chinese chess machine. It was designed to record chess moves in international competitions. It's also a powerful tool to learn how to play Chinese Chess and a chess analysis tool that even give your the ability to participate in any history games.
-</p>
 
-<p class="section"><a href="train.html"><img src="../images/train/logo.png" class="appicon" /></a>
-<a href="train.html"><b>Small Train</b></a> is a very special music game designed to suitable for children and parents with IQ challenging based on simple rules. It was developed as a training software that make children happy and smarter.
-</p>
+<div class="row">
+<div class="col-md-4">
+<p><a href="train.html"><img src="../images/train/logo.png" class="appicon" /></a></p>
+<h2>Small Train</h2>
+<p><a href="train.html"><b>Small Train</b></a> is a very special music game designed to suitable for children and parents with IQ challenging based on simple rules. It was developed as a training software that make children happy and smarter.</p>
+</div> <!-- col-md-4-->
 
-<p class="section"><a href="bc.html"><img src="../images/bc/logo.png" class="appicon" /></a>
-<a href="bc.html"><b>Business Chinese</b></a> is a very useful self-study tool developed to help people to learn the Business Chinese in an efficient way. It can speak word, sentence or a whole paragraph and has a builtin Kanji character stroke animation engine that can demonstrate how to writing each character.
-</p>
+<div class="col-md-4">
+<p><a href="bc.html"><img src="../images/bc/logo.png" class="appicon" /></a></p>
+<h2>Business Chinese</h2>
+<p><a href="bc.html"><b>Business Chinese</b></a> is a very useful self-study tool developed to help people to learn the Business Chinese in an efficient way. It can speak word, sentence or a whole paragraph and has a builtin Kanji character stroke animation engine that can demonstrate how to writing each character.</p>
+</div> <!-- col-md-4-->
 
-<p style="display:none;">The above macOS Apps and iOS apps were developed as useful tool or just for demonstration purpose, please kindly feedback if you meet any issue or have some suggestion, thank you.</p>
+<div class="col-md-4">
+</div> <!-- col-md-4-->
+</div><!-- row -->
 
+
+<p><br><br><br><br></p>
 <h2>About Apple App Store</h2>
 <p><b class="warning">Note: </b>One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaved bad comments on the "ratings and reviews" of some good apps or vice versa to mislead people, so please judge one app's value by yourself instead of what they said.</p>
 
 
 
 
-<p><br></p>
-<!--p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p-->
-<p><audio autoplay loop preload="none" id="myaudio">
-<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" />
-<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
-</audio></p>
-
-
-</div>
-</div>
-</section>
-</div>
-
-
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
