--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -1,64 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Taihaa「睇哈 - high precision fate analysis engine.">
+<meta charset="utf-8">
+<meta property="og:title" content="Taihaa, the high precision fate analysis engine.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Taihaa「睇哈 - high precision fate analysis engine.">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
+<meta name="description" content="Taihaa, the high precision fate analysis engine.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Taihaa,Destiny,Fortune,Fate,通書,農曆,通勝,萬年曆,老黃曆,擇日,八字,四柱,算命,黃道吉日,紫微斗數,演禽,七政四餘,命理,命格,祿命,命術">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<style type="text/css">
-.none {  padding:0;  margin: 0; }
-.button { background:#333333;width: auto; height: 25pt; vertical-align:middle;padding: 2px 2px 2px 2px;}
-.small { font-size: 12pt;}
-.machine { font-size: 12pt; margin-left: 50pt; }  
-</style>
-
-<title>Taihaa - high precision fate analysis engine.</title>
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>Taihaa, the high precision fate analysis engine.</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<!--div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title"> Taihaa「睇哈」</h1>
-      <h2 id="project_tagline"><em>嚴謹的命理分析工具。</em></h2>
-    </header>
-</div-->
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-
-
-<div class="mainscreen">
-<img src="../images/Taihaa/logo.png" style="width: 220px;"/><br>
-<h2>Taihaa<br><em>Version 1.2.2</em></h2>
-
-<p class="green">Taihaa is a high precision fate bone weight calculator, high precision fate analysis engine, high accuracy fate telling app, a serious app developed just for fun.</p>
-
-
-<h2>Intellectual Property Transfer</h2>
-<p>Taihaa has a built-in fate analysis engine that can be developed as fate telling device. This solution is specially designed for embedded systems and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine and a PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully paper report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.
-</p>
-
-
-<p><b>Taihaa「睇哈」</b> 是一個特意為需要進行祿命分析的人而開發的命術分析工具軟體。該軟體提供八字計算，命數骨重計算、四柱分析、達摩一掌經、紫微斗數及演禽理數，並提供命理相關基本資訊和相應分析，如出生時日五行屬性、星座、性格為人、先天命勢、大運年份、流年運勢、命格分析等相關信息。開發該工具軟體以方便使用者進行便捷的命理計算和分析。 該軟體純屬休閒娛樂性質，切勿盲目迷信。</p>
-
-
+    <div class="jumbotron">
+        <p><img src="../images/Taihaa/logo.png" style="width: 120px;" /></p>
+        <h1>Taihaa</h1>
+        <p class="greenbig">The high precision fate analysis engine.</p>
+        <p class="lead">
+<b>Taihaa</b> is a high precision fate bone weight calculator, high precision fate analysis engine, high accuracy fate telling app, a serious app developed just for fun.</p>
+    </div>
+    
 <h2>Why</h2>
-<p class="block">There're so many online fate telling site, but they are not rigorous, serious! Incorrect birth date calculation, incorrect birth eight-character calculation, incorrect fate bone weight calculation, incorrect big luck years calculation, etc. The calculation basis is wrong, and all of the conclusion are wrong, just used to fooling people.</p>
-<p>網路上有很多算命的軟體，但係佢哋並唔嚴謹，嚴肅！ 出生日期計算錯著，生辰八字計算錯著，命骨計算錯著，大運年份計算錯誤等。 計算依據係錯的，所有的結論也都係陰人嘅，都係錯的。</p>
-
-<p><a href="https://itunes.apple.com/us/app/taihaa/id1457696997?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
-<p>If you can't open the link above, please launch App Store and found Taihaa by searching.</p>
+<p>There're so many online fate telling site, but they are not rigorous, serious! Incorrect birth date calculation, incorrect birth eight-character calculation, incorrect fate bone weight calculation, incorrect big luck years calculation, etc. The calculation basis is wrong, and all of the conclusion are wrong, just used to fooling people.</p>
 
 <h2>How the conclusions in the fate analysis report calculated?</h2>
 <p>
@@ -67,6 +42,24 @@
 3. Calculate big lucky years based on very accurate time value of 24 solar terms, that must be accurate to one second.<br>
 <span class="green">&nbsp;&nbsp;To get the above accurate time values it requires very big calculation and following many rules. The astronomical data of the 24 solar terms are calculated based on astronomical data provided by the Royal Nautical Almanac and the US Navy Astronomical Meteorological Station.</span><br>
 </p>
+
+<h2>Intellectual Property Transfer</h2>
+<p>Taihaa has a built-in fate analysis engine that can be developed as fate telling device. This solution is specially designed for embedded systems and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine and a PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully paper report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.
+</p>
+
+
+<hr>
+<h2>Taihaa「睇哈」<br><em>嚴謹的命理分析工具</em></h2>
+<p><b>Taihaa「睇哈」</b> 是一個特意為需要進行祿命分析的人而開發的命術分析工具軟體。該軟體提供八字計算，命數骨重計算、四柱分析、達摩一掌經、紫微斗數及演禽理數，並提供命理相關基本資訊和相應分析，如出生時日五行屬性、星座、性格為人、先天命勢、大運年份、流年運勢、命格分析等相關信息。開發該工具軟體以方便使用者進行便捷的命理計算和分析。 該軟體純屬休閒娛樂性質，切勿盲目迷信。</p>
+
+
+
+<h2>Why</h2>
+<p>網路上有很多算命的軟體，但係佢哋並唔嚴謹，嚴肅！ 出生日期計算錯著，生辰八字計算錯著，命骨計算錯著，大運年份計算錯誤等。 計算依據係錯的，所有的結論也都係陰人嘅，都係錯的。</p>
+
+<p><a href="https://itunes.apple.com/us/app/taihaa/id1457696997?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p>If you can't open the link above, please launch App Store and found Taihaa by searching.</p>
+
 
 <h2>命術分析結論是如何計算得到的？</h2>
 <p>
@@ -77,11 +70,40 @@
 </p>
 
 
-<h2>Screenshots:</h2>
-<p><a href="../images/Taihaa/1.png" target="_blank"><img src="../images/Taihaa/1.png" class="screenshots"></a></p>
-<p><a href="../images/Taihaa/2.png" target="_blank"><img src="../images/Taihaa/2.png" class="screenshots"></a></p>
-<p><a href="../images/Taihaa/3.png" target="_blank"><img src="../images/Taihaa/3.png" class="screenshots"></a></p>
+<h2>Screenshots</h2>
+<div class="screenshots">
+<div class="row">
+   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../images/Taihaa/1.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/Taihaa/2.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/Taihaa/3.png" alt="Third slide">
+    </div>  
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
+</div>
+</div>
 
+
+<p><br><br></p>
 <h2>輸入</h2>
 <p>1. 首先請確認出生日期是使用西曆還是農曆。</p>
 <p>2. 其次請確認性別、出生年月日和準確的時辰(應特別注意夏令時間)。<br>
@@ -120,23 +142,33 @@
 <h2>引用</h2>
 <p><a href="tungsyu.html">Tungsyu「通書」</a>, 農曆資訊查詢工具。 The Calendar of Yangtze River.</p>
 
-<p><br></p>
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+<p><br><br></p>
 
-</div>
-</div>
-</section>
-</div>
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
