--- a/en/train.html
+++ b/en/train.html
@@ -1,73 +1,111 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="The next generation intelligent microcomputer.">
+<meta charset="utf-8">
+<meta property="og:title" content="Small Train, enjoy wonderful music game.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
 <meta property="og:site_name" content="Sevenuc Consulting">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
 <meta name="description" content="Small Train, enjoy wonderful music game.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
-<link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<!--script src="../js/twitter.js"></script-->
-<title> Small Train </title>
+<meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
+<title>Small Train, enjoy wonderful music game.</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/stylesheet.css">
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
-<div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="project_title">Small Train</h1>
-      <h2 id="project_tagline">Enjoy wonderful music game.</h2>
-    </header>
-</div>
+<div class="container-fluid">
 
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-
-
-<div class="mainscreen">
+<div class="jumbotron">
+        <p><img src="../images/train/logo.png" style="width: 120px;" /></p>
+        <h1>Small Train</h1>
+        <p>Are you looking for a particular game? In the past 15 years, if you like classic puzzle games such as Tic tac toe, Tetris, Sudoku, Snake and other games, then this game is one of them, simple and fun beyond times.</p>
+        <p class="lead">
+<b>Small Train</b> is a very special music game designed to suitable for children and parents with IQ challenging based on simple rules. In a lot of sand, the pearl is little and not always shine, but once you find it you will ever put it down. Wonderful music can comfort the brain, appease the human mind, release the inner joy, the body and mind will be relaxed and feel comfortable in a relaxed rhythm and atmosphere. For children, wonderful music influence can make children happy and smarter.</p>
+    </div>
+    
 
 <video class="videobox" id="mainVideo" width="400" height="234" controls autoplay>
 <source src="/videos/train.mp4" type="video/mp4">
 </video>
 
 
-<p>Are you looking for a particular game? In the past 15 years, if you like classic puzzle games such as Tic tac toe, Tetris, Sudoku, Snake and other games, then this game is one of them, simple and fun beyond times.</p>
-<p><b>Small Train</b> is a very special music game designed to suitable for children and parents with IQ challenging based on simple rules. In a lot of sand, the pearl is little and not always shine, but once you find it you will ever put it down. Wonderful music can comfort the brain, appease the human mind, release the inner joy, the body and mind will be relaxed and feel comfortable in a relaxed rhythm and atmosphere. For children, wonderful music influence can make children happy and smarter.<br>
-</p>
 <p>Download the funny music game from App Store: <br><br>
 <a href="https://itunes.apple.com/us/app/small-train/id858636040?mt=8" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" ></a><br></p>
 <p><br><br></p>
 
-<h2>Screenshots:</h2>
+
+<h2>Screenshots</h2>
 <div class="screenshots">
-<p><a href="../images/train/401.png" target="_blank"><img src="../images/train/401.png" class="screenshots"></a></p>
-<p><a href="../images/train/402.png" target="_blank"><img src="../images/train/402.png" class="screenshots"></a></p>
-<p><a href="../images/train/403.png" target="_blank"><img src="../images/train/403.png" class="screenshots"></a></p>
-<p><a href="../images/train/404.png" target="_blank"><img src="../images/train/404.png" class="screenshots"></a></p>
-<p><br></p>
+<div class="row">
+   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../images/train/401.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/train/402.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/train/403.png" alt="Third slide">
+    </div>  
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/train/404.png" alt="Third slide">
+    </div> 
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
+</div>
+</div>
 
-</div>
-</div>
-</section>
-</div>
 
-<!-- FOOTER  -->
-<div id="footer_wrap" class="outer">
- <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+<p><br><br></p>
+
+
+
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+            <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
- </footer>
-</div>
-</body></html>
+            </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <span class="text-muted mx-2">|</span> 
+            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <span class="text-muted mx-2">|</span>
+                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                
+        </div>
+    </div>
+</footer>
+	
+	
+</div><!-- container-fluid -->
+</body>
+</html>
